performance-comparisons/v9.7/results/report_2_mysql_unbounded.md
### Store times avg (worsened):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| ProductNoticesStore.GetViews | avg | 1ms | 135ms | 134ms | 22357.74
| GroupStore.GetGroupsAssociatedToChannelsByTeam | avg | 1ms | 65ms | 64ms | 7000.43
| LicenseStore.GetAll | avg | 1ms | 24ms | 23ms | 4433.67
| DraftStore.GetDraftsForUser | avg | 1ms | 41ms | 40ms | 4188.19
| EmojiStore.Search | avg | 1ms | 29ms | 28ms | 3668.05
| ChannelStore.GetAllChannelMembersForUser | avg | 3ms | 28ms | 25ms | 845.86
| TokenStore.Cleanup | avg | 2ms | 18ms | 16ms | 735.79
| DraftStore.Delete | avg | 2ms | 15ms | 13ms | 546.04
| CommandWebhookStore.Cleanup | avg | 2ms | 8ms | 6ms | 340.20
| UserStore.GetMany | avg | 26ms | 73ms | 47ms | 183.65
| ChannelStore.GetAllChannelMembersNotifyPropsForChannel | avg | 27ms | 73ms | 46ms | 169.14
| ChannelStore.GetMembers | avg | 37ms | 96ms | 59ms | 159.02
| ChannelStore.GetTeamChannels | avg | 80ms | 183ms | 103ms | 128.47
| ChannelStore.GetMemberForPost | avg | 29ms | 58ms | 29ms | 101.25
| ChannelStore.GetMembersForUserWithPagination | avg | 74ms | 149ms | 75ms | 101.06
| RoleStore.ChannelHigherScopedPermissions | avg | 82ms | 153ms | 71ms | 86.78
| ThreadStore.Get | avg | 50ms | 93ms | 43ms | 86.37
| UserStore.AnalyticsGetInactiveUsersCount | avg | 14ms | 25ms | 11ms | 79.56
| PostAcknowledgementStore.GetForPost | avg | 33ms | 57ms | 24ms | 73.20
| PostPriorityStore.GetForPost | avg | 31ms | 50ms | 19ms | 60.81
| ChannelStore.CreateDirectChannel | avg | 120ms | 172ms | 52ms | 43.22
| BotStore.Get | avg | 28ms | 40ms | 12ms | 42.51
| GroupStore.AdminRoleGroupsForSyncableMember | avg | 38ms | 52ms | 14ms | 36.37
| PreferenceStore.GetAll | avg | 45ms | 61ms | 16ms | 35.25
| PostStore.GetPostReminderMetadata | avg | 38ms | 50ms | 12ms | 31.69
| ChannelStore.GetByName | avg | 39ms | 51ms | 12ms | 31.01
| ChannelStore.CreateSidebarCategory | avg | 30ms | 39ms | 9ms | 29.56
| ThreadStore.GetThreadForUser | avg | 57ms | 72ms | 15ms | 26.14
| ThreadStore.GetMembershipForUser | avg | 39ms | 49ms | 10ms | 25.65
| ChannelStore.GetAllChannelMemberIdsByChannelId | avg | 62ms | 77ms | 15ms | 24.18
| ChannelStore.SaveMember | avg | 191ms | 237ms | 46ms | 24.13
| TeamStore.AnalyticsTeamCount | avg | 25ms | 31ms | 6ms | 23.84
| ChannelStore.CreateInitialSidebarCategories | avg | 59ms | 73ms | 14ms | 23.72
| PostPersistentNotificationStore.GetSingle | avg | 44ms | 54ms | 10ms | 22.87
| UserTermsOfServiceStore.GetByUser | avg | 35ms | 43ms | 8ms | 22.86
| ChannelStore.SearchGroupChannels | avg | 44ms | 54ms | 10ms | 22.77
| SessionStore.GetSessionsWithActiveDeviceIds | avg | 31ms | 38ms | 7ms | 22.60
| UserStore.IsEmpty | avg | 18ms | 22ms | 4ms | 21.90
| ChannelStore.UpdateSidebarCategories | avg | 143ms | 173ms | 30ms | 20.93
| FileInfoStore.Get | avg | 29ms | 35ms | 6ms | 20.87
| TeamStore.Get | avg | 41ms | 49ms | 8ms | 19.50
| TeamStore.GetAllPage | avg | 37ms | 44ms | 7ms | 18.85
| PostStore.GetPosts | avg | 33ms | 39ms | 6ms | 18.07
| ChannelStore.Get | avg | 79ms | 93ms | 14ms | 17.70
| JobStore.GetAllByStatus | avg | 40ms | 47ms | 7ms | 17.51
| ChannelStore.AnalyticsTypeCount | avg | 35ms | 41ms | 6ms | 17.10
| UserStore.Get | avg | 12ms | 14ms | 2ms | 16.70
| StatusStore.Get | avg | 25ms | 29ms | 4ms | 16.19
| LinkMetadataStore.Get | avg | 43ms | 50ms | 7ms | 16.14
| UserStore.GetProfileByIds | avg | 25ms | 29ms | 4ms | 16.11
| ChannelStore.Save | avg | 57ms | 66ms | 9ms | 15.89
| ThreadStore.GetThreadFollowers | avg | 44ms | 51ms | 7ms | 15.80
| PreferenceStore.Get | avg | 38ms | 44ms | 6ms | 15.74
| PostAcknowledgementStore.GetForPosts | avg | 54ms | 62ms | 8ms | 14.89
| WebhookStore.GetOutgoingByTeam | avg | 47ms | 54ms | 7ms | 14.77
| TeamStore.GetTeamsByUserId | avg | 41ms | 47ms | 6ms | 14.71
| SessionStore.Get | avg | 42ms | 48ms | 6ms | 14.44
| PostPriorityStore.GetForPosts | avg | 56ms | 64ms | 8ms | 14.33
| GroupStore.GetByName | avg | 28ms | 32ms | 4ms | 14.16
| PostStore.GetSingle | avg | 43ms | 49ms | 6ms | 14.11
| ChannelStore.GetChannelsWithUnreadsAndWithMentions | avg | 36ms | 41ms | 5ms | 14.06
| ChannelStore.GetSidebarCategory | avg | 65ms | 74ms | 9ms | 13.92
| FileInfoStore.GetForPost | avg | 52ms | 59ms | 7ms | 13.35
| GroupStore.GetGroups | avg | 47ms | 53ms | 6ms | 12.86
| ChannelStore.GetFileCount | avg | 31ms | 35ms | 4ms | 12.82
| PostStore.Get | avg | 78ms | 88ms | 10ms | 12.78
| ChannelStore.GetMemberLastViewedAt | avg | 32ms | 36ms | 4ms | 12.60
| ThreadStore.GetThreadUnreadReplyCount | avg | 49ms | 55ms | 6ms | 12.25
| PostStore.GetEtag | avg | 58ms | 65ms | 7ms | 12.16
| UserStore.GetProfilesByUsernames | avg | 33ms | 37ms | 4ms | 12.12
| EmojiStore.GetByName | avg | 42ms | 47ms | 5ms | 11.99
| ThreadStore.GetThreadsForUser | avg | 51ms | 57ms | 6ms | 11.81
| TeamStore.GetChannelUnreadsForAllTeams | avg | 37ms | 41ms | 4ms | 10.80
| UserStore.GetUnreadCount | avg | 38ms | 42ms | 4ms | 10.39
| ChannelStore.GetGuestCount | avg | 68ms | 75ms | 7ms | 10.33
| ChannelStore.GetMembersForUser | avg | 43ms | 47ms | 4ms | 9.20
| TeamStore.SaveMember | avg | 146ms | 159ms | 13ms | 8.90
| PostStore.GetPostsBefore | avg | 45ms | 49ms | 4ms | 8.84
| ThreadStore.GetTotalUnreadMentions | avg | 34ms | 37ms | 3ms | 8.79
| PostStore.GetPostsByThread | avg | 46ms | 50ms | 4ms | 8.65
| ThreadStore.GetTotalUnreadThreads | avg | 35ms | 38ms | 3ms | 8.58
| ThreadStore.GetTotalUnreadUrgentMentions | avg | 35ms | 38ms | 3ms | 8.55
| PostStore.GetPostsSince | avg | 64ms | 69ms | 5ms | 7.86
| PostStore.SearchPostsForUser | avg | 100ms | 107ms | 7ms | 6.98
| UserStore.GetForLogin | avg | 29ms | 31ms | 2ms | 6.90
| ChannelStore.GetPinnedPostCount | avg | 43ms | 46ms | 3ms | 6.90
| ThreadStore.GetTeamsUnreadForUser | avg | 42ms | 44ms | 2ms | 4.78
| ChannelStore.GetChannels | avg | 44ms | 46ms | 2ms | 4.56
| ProductNoticesStore.View | avg | 45ms | 47ms | 2ms | 4.46
| ChannelStore.GetSidebarCategoriesForTeamForUser | avg | 91ms | 95ms | 4ms | 4.40
| UserStore.AnalyticsActiveCount | avg | 391ms | 406ms | 15ms | 3.84
| ChannelStore.GetMemberCount | avg | 342ms | 354ms | 12ms | 3.50
| UserStore.AutocompleteUsersInChannel | avg | 413ms | 427ms | 14ms | 3.39
| PostStore.AnalyticsPostCount | avg | 2.985s | 3.051s | 66ms | 2.21
| UserStore.GetAllProfilesInChannel | avg | 829ms | 847ms | 18ms | 2.17
### Store times p99 (worsened):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| ProductNoticesStore.GetViews | p99 | 5ms | 492ms | 487ms | 9812.60
| DraftStore.GetDraftsForUser | p99 | 5ms | 246ms | 241ms | 4856.09
| GroupStore.GetGroupsAssociatedToChannelsByTeam | p99 | 5ms | 246ms | 241ms | 4856.01
| LicenseStore.GetAll | p99 | 5ms | 240ms | 235ms | 4735.15
| EmojiStore.Search | p99 | 5ms | 96ms | 91ms | 1832.82
| ChannelStore.GetMembers | p99 | 50ms | 493ms | 443ms | 890.45
| TokenStore.Cleanup | p99 | 5ms | 49ms | 44ms | 888.71
| ThreadStore.Get | p99 | 489ms | 2.55s | 2.061s | 421.32
| ChannelStore.GetAllChannelMembersForUser | p99 | 78ms | 400ms | 322ms | 414.02
| DraftStore.Delete | p99 | 5ms | 25ms | 20ms | 404.04
| ChannelStore.GetAllChannelMembersNotifyPropsForChannel | p99 | 159ms | 788ms | 629ms | 396.37
| CommandWebhookStore.Cleanup | p99 | 5ms | 24ms | 19ms | 383.76
| ChannelStore.GetMembersForUserWithPagination | p99 | 246ms | 880ms | 634ms | 257.91
| TeamStore.AnalyticsTeamCount | p99 | 97ms | 243ms | 146ms | 149.75
| ChannelStore.GetAllChannelMemberIdsByChannelId | p99 | 482ms | 1.154s | 672ms | 139.43
| PostAcknowledgementStore.GetForPost | p99 | 350ms | 835ms | 485ms | 138.58
| UserStore.GetMany | p99 | 240ms | 482ms | 242ms | 101.04
| UserStore.AnalyticsGetInactiveUsersCount | p99 | 49ms | 98ms | 49ms | 99.48
| ChannelStore.CreateSidebarCategory | p99 | 50ms | 99ms | 49ms | 98.74
| ChannelStore.CreateDirectChannel | p99 | 991ms | 1.947s | 956ms | 96.47
| ChannelStore.GetTeamChannels | p99 | 482ms | 935ms | 453ms | 93.89
| PostPriorityStore.GetForPost | p99 | 383ms | 734ms | 351ms | 91.57
| UserStore.GetProfilesInChannel | p99 | 473ms | 900ms | 427ms | 90.36
| ChannelStore.GetMemberForPost | p99 | 398ms | 695ms | 297ms | 74.63
| JobStore.Save | p99 | 42ms | 65ms | 23ms | 55.42
| ChannelStore.GetMemberCount | p99 | 1.074s | 1.651s | 577ms | 53.72
| JobStore.UpdateOptimistically | p99 | 22ms | 33ms | 11ms | 50.93
| ChannelStore.SearchGroupChannels | p99 | 471ms | 709ms | 238ms | 50.49
| PostPersistentNotificationStore.GetSingle | p99 | 482ms | 723ms | 241ms | 50.05
| PreferenceStore.GetAll | p99 | 454ms | 653ms | 199ms | 43.87
| ThreadStore.GetMembershipForUser | p99 | 459ms | 652ms | 193ms | 42.00
| PostStore.GetEtag | p99 | 499ms | 707ms | 208ms | 41.71
| ThreadStore.GetThreadsForUser | p99 | 491ms | 695ms | 204ms | 41.57
| ThreadStore.GetThreadUnreadReplyCount | p99 | 480ms | 678ms | 198ms | 41.28
| PostStore.GetPostsSince | p99 | 493ms | 689ms | 196ms | 39.79
| TeamStore.SaveMember | p99 | 584ms | 816ms | 232ms | 39.75
| WebhookStore.GetOutgoingByTeam | p99 | 486ms | 676ms | 190ms | 39.09
| JobStore.UpdateStatusOptimistically | p99 | 24ms | 33ms | 9ms | 37.93
| ChannelStore.Get | p99 | 633ms | 868ms | 235ms | 37.15
| PostStore.GetPostsByThread | p99 | 481ms | 659ms | 178ms | 36.98
| JobStore.GetAllByStatus | p99 | 453ms | 608ms | 155ms | 34.20
| ThreadStore.GetThreadFollowers | p99 | 487ms | 652ms | 165ms | 33.85
| ChannelStore.CreateInitialSidebarCategories | p99 | 461ms | 617ms | 156ms | 33.83
| ChannelStore.GetGuestCount | p99 | 589ms | 787ms | 198ms | 33.64
| LinkMetadataStore.Get | p99 | 467ms | 624ms | 157ms | 33.63
| FileInfoStore.GetForPost | p99 | 536ms | 716ms | 180ms | 33.56
| ThreadStore.GetTeamsUnreadForUser | p99 | 480ms | 637ms | 157ms | 32.70
| ChannelStore.UpdateSidebarChannelsByPreferences | p99 | 24ms | 32ms | 8ms | 32.65
| UserStore.IsEmpty | p99 | 236ms | 311ms | 75ms | 31.83
| GroupStore.GetGroups | p99 | 479ms | 629ms | 150ms | 31.29
| UserStore.Get | p99 | 243ms | 319ms | 76ms | 31.21
| PostStore.GetSingle | p99 | 462ms | 600ms | 138ms | 29.86
| TeamStore.Get | p99 | 458ms | 584ms | 126ms | 27.52
| ChannelStore.GetSidebarCategoriesForTeamForUser | p99 | 934ms | 1.182s | 248ms | 26.54
| PostStore.SearchPostsForUser | p99 | 856ms | 1.071s | 215ms | 25.13
| ThreadStore.GetThreadForUser | p99 | 747ms | 931ms | 184ms | 24.63
| UserStore.GetUnreadCount | p99 | 472ms | 578ms | 106ms | 22.48
| StatusStore.Get | p99 | 356ms | 431ms | 75ms | 21.07
| ChannelStore.Save | p99 | 438ms | 525ms | 87ms | 19.84
| PostAcknowledgementStore.GetForPosts | p99 | 772ms | 924ms | 152ms | 19.68
| ChannelMemberHistoryStore.LogJoinEvent | p99 | 37ms | 44ms | 7ms | 18.78
| UserStore.AutocompleteUsersInChannel | p99 | 1.765s | 2.096s | 331ms | 18.75
| UserStore.Count | p99 | 795ms | 937ms | 142ms | 17.86
| GroupStore.GetByName | p99 | 372ms | 437ms | 65ms | 17.46
| PostPriorityStore.GetForPosts | p99 | 800ms | 934ms | 134ms | 16.76
| UserStore.GetProfileByIds | p99 | 396ms | 461ms | 65ms | 16.43
| UserStore.UpdateUpdateAt | p99 | 37ms | 43ms | 6ms | 16.07
| GroupStore.AdminRoleGroupsForSyncableMember | p99 | 429ms | 496ms | 67ms | 15.62
| PostStore.GetPosts | p99 | 402ms | 463ms | 61ms | 15.19
| FileInfoStore.Get | p99 | 411ms | 472ms | 61ms | 14.83
| StatusStore.UpdateLastActivityAt | p99 | 42ms | 48ms | 6ms | 14.41
| PostStore.GetPostsBefore | p99 | 474ms | 542ms | 68ms | 14.35
| UserTermsOfServiceStore.GetByUser | p99 | 430ms | 491ms | 61ms | 14.19
| SessionStore.Save | p99 | 374ms | 426ms | 52ms | 13.89
| SystemStore.GetByName | p99 | 29ms | 33ms | 4ms | 13.78
| ChannelStore.SaveMember | p99 | 2.032s | 2.31s | 278ms | 13.68
| PostStore.Save | p99 | 114ms | 129ms | 15ms | 13.21
| PreferenceStore.Get | p99 | 464ms | 525ms | 61ms | 13.14
| ChannelStore.UpdateSidebarCategories | p99 | 845ms | 954ms | 109ms | 12.90
| ChannelStore.GetChannels | p99 | 474ms | 532ms | 58ms | 12.24
| ChannelStore.IncrementMentionCount | p99 | 34ms | 38ms | 4ms | 11.63
| ChannelStore.GetMemberLastViewedAt | p99 | 417ms | 465ms | 48ms | 11.51
| BotStore.Get | p99 | 430ms | 479ms | 49ms | 11.40
| ChannelStore.GetFileCount | p99 | 394ms | 437ms | 43ms | 10.92
| UserStore.GetProfilesByUsernames | p99 | 430ms | 476ms | 46ms | 10.69
| TeamStore.GetAllPage | p99 | 436ms | 482ms | 46ms | 10.55
| ThreadStore.GetTotalUnreadUrgentMentions | p99 | 432ms | 477ms | 45ms | 10.42
| PostStore.Get | p99 | 885ms | 977ms | 92ms | 10.40
| SessionStore.GetSessionsWithActiveDeviceIds | p99 | 434ms | 479ms | 45ms | 10.38
| ChannelStore.GetChannelsWithUnreadsAndWithMentions | p99 | 444ms | 490ms | 46ms | 10.36
| TeamStore.GetTeamsForUser | p99 | 338ms | 373ms | 35ms | 10.35
| UserStore.GetForLogin | p99 | 398ms | 438ms | 40ms | 10.06
| JobStore.UpdateStatus | p99 | 20ms | 22ms | 2ms | 10.05
| TeamStore.GetChannelUnreadsForAllTeams | p99 | 432ms | 473ms | 41ms | 9.49
| ChannelStore.GetByName | p99 | 453ms | 496ms | 43ms | 9.49
| ProductNoticesStore.View | p99 | 235ms | 257ms | 22ms | 9.36
| UserStore.GetByUsername | p99 | 457ms | 499ms | 42ms | 9.18
| SessionStore.Get | p99 | 448ms | 488ms | 40ms | 8.93
| PostStore.GetPostIdAfterTime | p99 | 36ms | 39ms | 3ms | 8.27
| SessionStore.UpdateLastActivityAt | p99 | 36ms | 39ms | 3ms | 8.25
| ThreadStore.GetTotalUnreadMentions | p99 | 437ms | 472ms | 35ms | 8.01
| ThreadStore.GetTotalUnreadThreads | p99 | 441ms | 476ms | 35ms | 7.94
| TeamStore.GetTeamsByUserId | p99 | 452ms | 487ms | 35ms | 7.74
| EmojiStore.GetByName | p99 | 461ms | 494ms | 33ms | 7.16
| ChannelStore.GetMembersForUser | p99 | 467ms | 500ms | 33ms | 7.06
| ThreadStore.GetTotalThreads | p99 | 442ms | 473ms | 31ms | 7.01
| PreferenceStore.Save | p99 | 92ms | 98ms | 6ms | 6.56
| UserStore.GetAllProfiles | p99 | 423ms | 450ms | 27ms | 6.38
| UserStore.UpdateLastLogin | p99 | 32ms | 34ms | 2ms | 6.32
| ChannelStore.UpdateLastViewedAt | p99 | 74ms | 78ms | 4ms | 5.39
| ChannelStore.AutocompleteInTeamForSearch | p99 | 2.165s | 2.279s | 114ms | 5.27
| AuditStore.Save | p99 | 39ms | 41ms | 2ms | 5.14
| UserStore.Save | p99 | 221ms | 232ms | 11ms | 4.98
| ThreadStore.MaintainMembership | p99 | 85ms | 89ms | 4ms | 4.70
| ReactionStore.GetForPost | p99 | 490ms | 513ms | 23ms | 4.69
| ThreadStore.MarkAsRead | p99 | 43ms | 45ms | 2ms | 4.67
| RoleStore.ChannelHigherScopedPermissions | p99 | 888ms | 928ms | 40ms | 4.51
| ThreadStore.UpdateMembership | p99 | 48ms | 50ms | 2ms | 4.18
| PostStore.Update | p99 | 94ms | 97ms | 3ms | 3.19
| ChannelStore.GetSidebarCategory | p99 | 465ms | 476ms | 11ms | 2.37
| PostStore.GetPostsAfter | p99 | 449ms | 458ms | 9ms | 2.01
| UserStore.Search | p99 | 954ms | 971ms | 17ms | 1.78
| ChannelStore.GetPinnedPostCount | p99 | 479ms | 484ms | 5ms | 1.04
### Store times avg (improved):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| FileInfoStore.Search | avg | 108ms | 0s | -108ms | -100.33
| TeamStore.GetByName | avg | 27ms | 0s | -27ms | -99.80
| SessionStore.GetLRUSessions | avg | 27ms | 0s | -27ms | -98.47
| SystemStore.PermanentDeleteByName | avg | 4ms | 0s | -4ms | -96.28
| SystemStore.SaveOrUpdate | avg | 3ms | 0s | -3ms | -94.91
| SessionStore.GetSessionsExpired | avg | 65ms | 26ms | -39ms | -59.97
| PluginStore.Get | avg | 161ms | 72ms | -89ms | -55.32
| PostStore.SetPostReminder | avg | 17ms | 8ms | -9ms | -52.49
| SessionStore.Remove | avg | 12ms | 6ms | -6ms | -51.47
| EmojiStore.GetMultipleByName | avg | 268ms | 131ms | -137ms | -51.17
| StatusStore.SaveOrUpdate | avg | 40ms | 21ms | -19ms | -47.26
| PluginStore.List | avg | 60ms | 32ms | -28ms | -46.55
| UserAccessTokenStore.GetByToken | avg | 35ms | 19ms | -16ms | -45.29
| PreferenceStore.DeleteCategoryAndName | avg | 7ms | 4ms | -3ms | -44.25
| ChannelStore.GetChannelUnread | avg | 26ms | 15ms | -11ms | -42.71
| JobStore.GetCountByStatusAndType | avg | 50ms | 29ms | -21ms | -42.12
| UserStore.GetProfilesInChannel | avg | 161ms | 103ms | -58ms | -36.12
| PostStore.Delete | avg | 90ms | 59ms | -31ms | -34.35
| DraftStore.DeleteDraftsAssociatedWithPost | avg | 6ms | 4ms | -2ms | -31.69
| JobStore.Get | avg | 54ms | 37ms | -17ms | -31.24
| StatusStore.UpdateExpiredDNDStatuses | avg | 13ms | 9ms | -4ms | -31.18
| UserStore.Update | avg | 10ms | 7ms | -3ms | -29.72
| ChannelStore.GetPublicChannelsForTeam | avg | 68ms | 49ms | -19ms | -27.99
| JobStore.GetNewestJobByStatusesAndType | avg | 44ms | 32ms | -12ms | -27.55
| ChannelStore.GetChannelsByUser | avg | 35ms | 26ms | -9ms | -25.81
| StatusStore.GetByIds | avg | 65ms | 51ms | -14ms | -21.58
| TeamStore.GetTeamsForUser | avg | 26ms | 22ms | -4ms | -15.19
| UserStore.Count | avg | 247ms | 217ms | -30ms | -12.16
| UserStore.GetByUsername | avg | 43ms | 40ms | -3ms | -7.01
| ChannelStore.AutocompleteInTeamForSearch | avg | 303ms | 284ms | -19ms | -6.27
| UserStore.GetAllProfiles | avg | 38ms | 36ms | -2ms | -5.33
| ReactionStore.GetForPost | avg | 48ms | 46ms | -2ms | -4.19
### Store times p99 (improved):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| RetentionPolicyStore.GetCount | p99 | 5ms | 0s | -5ms | -101.01
| SystemStore.SaveOrUpdate | p99 | 5ms | 0s | -5ms | -101.01
| RetentionPolicyStore.GetAll | p99 | 5ms | 0s | -5ms | -101.01
| SystemStore.PermanentDeleteByName | p99 | 5ms | 0s | -5ms | -101.01
| ChannelStore.InvalidateChannelByName | p99 | 5ms | 0s | -5ms | -101.01
| ChannelStore.InvalidateAllChannelMembersForUser | p99 | 5ms | 0s | -5ms | -101.00
| TeamStore.GetByName | p99 | 395ms | 0s | -395ms | -100.12
| SessionStore.GetLRUSessions | p99 | 392ms | 0s | -392ms | -99.89
| FileInfoStore.Search | p99 | 248ms | 0s | -248ms | -99.80
| SessionStore.Remove | p99 | 220ms | 23ms | -197ms | -89.55
| PostStore.SetPostReminder | p99 | 226ms | 45ms | -181ms | -80.09
| PostPersistentNotificationStore.DeleteExpired | p99 | 19ms | 5ms | -14ms | -74.26
| PreferenceStore.DeleteCategoryAndName | p99 | 89ms | 24ms | -65ms | -73.45
| DraftStore.DeleteDraftsAssociatedWithPost | p99 | 89ms | 24ms | -65ms | -73.45
| UserAccessTokenStore.GetByToken | p99 | 650ms | 303ms | -347ms | -53.38
| EmojiStore.GetMultipleByName | p99 | 968ms | 455ms | -513ms | -52.98
| StatusStore.UpdateExpiredDNDStatuses | p99 | 93ms | 44ms | -49ms | -52.41
| PluginStore.Get | p99 | 970ms | 470ms | -500ms | -51.55
| UserStore.Update | p99 | 76ms | 37ms | -39ms | -51.48
| PostStore.Delete | p99 | 885ms | 465ms | -420ms | -47.46
| JobStore.GetNewestJobByStatusesAndType | p99 | 600ms | 382ms | -218ms | -36.33
| StatusStore.SaveOrUpdate | p99 | 681ms | 438ms | -243ms | -35.66
| StatusStore.GetByIds | p99 | 910ms | 589ms | -321ms | -35.27
| LinkMetadataStore.Save | p99 | 65ms | 43ms | -22ms | -34.11
| ChannelStore.GetMember | p99 | 67ms | 50ms | -17ms | -25.36
| JobStore.GetCountByStatusAndType | p99 | 550ms | 411ms | -139ms | -25.27
| FileInfoStore.SetContent | p99 | 87ms | 74ms | -13ms | -14.98
| ThreadStore.MarkAllAsReadByChannels | p99 | 45ms | 40ms | -5ms | -11.20
| ChannelStore.GetChannelUnread | p99 | 290ms | 258ms | -32ms | -11.05
| FileInfoStore.Save | p99 | 48ms | 43ms | -5ms | -10.36
| JobStore.Get | p99 | 443ms | 414ms | -29ms | -6.54
| TeamStore.GetMember | p99 | 70ms | 66ms | -4ms | -5.70
| ChannelStore.GetChannelsByUser | p99 | 406ms | 389ms | -17ms | -4.19
| SessionStore.GetSessionsExpired | p99 | 246ms | 236ms | -10ms | -4.07
| FileInfoStore.AttachToPost | p99 | 52ms | 50ms | -2ms | -3.81
| ChannelStore.GetPublicChannelsForTeam | p99 | 480ms | 472ms | -8ms | -1.67
| PluginStore.List | p99 | 720ms | 710ms | -10ms | -1.39
| PostStore.GetPostReminderMetadata | p99 | 460ms | 454ms | -6ms | -1.30
### API times avg (worsened):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| getDrafts | avg | 1ms | 81ms | 80ms | 7847.51
| getGroupsAssociatedToChannelsByTeam | avg | 1ms | 65ms | 64ms | 5694.97
| getPrevTrialLicense | avg | 1ms | 34ms | 33ms | 4109.33
| autocompleteEmojis | avg | 1ms | 29ms | 28ms | 3491.32
| createCategoryForTeamForUser | avg | 35ms | 424ms | 389ms | 1123.40
| getGroups | avg | 5ms | 38ms | 33ms | 627.80
| getChannelMembersForUser | avg | 19ms | 57ms | 38ms | 201.76
| getAnalytics | avg | 395ms | 1.157s | 762ms | 193.01
| getChannelMembers | avg | 38ms | 97ms | 59ms | 157.02
| createChannel | avg | 80ms | 183ms | 103ms | 128.28
| getChannel | avg | 58ms | 108ms | 50ms | 86.25
| unfollowThreadByUser | avg | 100ms | 181ms | 81ms | 80.60
| followThreadByUser | avg | 102ms | 175ms | 73ms | 71.27
| createUser | avg | 149ms | 219ms | 70ms | 46.94
| getRolesByNames | avg | 64ms | 92ms | 28ms | 44.03
| patchPost | avg | 332ms | 471ms | 139ms | 41.91
| getPreferences | avg | 46ms | 63ms | 17ms | 36.85
| getFilteredUsersStats | avg | 109ms | 147ms | 38ms | 34.97
| getUser | avg | 49ms | 66ms | 17ms | 34.89
| getChannelMember | avg | 45ms | 58ms | 13ms | 28.91
| getLicenseSelfServeStatus | avg | 256ms | 328ms | 72ms | 28.15
| createDirectChannel | avg | 372ms | 461ms | 89ms | 23.89
| updateCategoriesForTeamForUser | avg | 316ms | 389ms | 73ms | 23.12
| searchGroupChannels | avg | 44ms | 54ms | 10ms | 22.73
| getAllTeams | avg | 40ms | 47ms | 7ms | 17.61
| viewChannel | avg | 88ms | 102ms | 14ms | 15.95
| getTeamsForUser | avg | 41ms | 47ms | 6ms | 14.68
| saveReaction | avg | 136ms | 155ms | 19ms | 13.98
| getThreadsForUser | avg | 50ms | 56ms | 6ms | 12.06
| getUsersByNames | avg | 34ms | 38ms | 4ms | 11.93
| getPostsForChannelAroundLastUnread | avg | 176ms | 196ms | 20ms | 11.35
| addTeamMember | avg | 2.31s | 2.568s | 258ms | 11.17
| getPostsForChannel | avg | 341ms | 378ms | 37ms | 10.86
| setPostReminder | avg | 187ms | 205ms | 18ms | 9.62
| searchPostsInTeam | avg | 192ms | 210ms | 18ms | 9.36
| updateReadStateThreadByUser | avg | 366ms | 400ms | 34ms | 9.28
| getTeamsUnreadForUser | avg | 59ms | 64ms | 5ms | 8.40
| getPostThread | avg | 270ms | 291ms | 21ms | 7.78
| getChannelMembersForTeamForUser | avg | 44ms | 47ms | 3ms | 6.78
| createGroupChannel | avg | 779ms | 830ms | 51ms | 6.54
| uploadFileStream | avg | 401ms | 423ms | 22ms | 5.49
| getProfileImage | avg | 88ms | 92ms | 4ms | 4.57
| getCategoriesForTeamForUser | avg | 91ms | 95ms | 4ms | 4.39
| getChannelsForTeamForUser | avg | 46ms | 48ms | 2ms | 4.38
| createPost | avg | 1.251s | 1.291s | 40ms | 3.20
| autocompleteUsers | avg | 340ms | 347ms | 7ms | 2.06
| searchUsers | avg | 207ms | 210ms | 3ms | 1.45
### API times p99 (worsened):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| getGroupsAssociatedToChannelsByTeam | p99 | 5ms | 246ms | 241ms | 4856.09
| getDrafts | p99 | 5ms | 246ms | 241ms | 4856.09
| getPrevTrialLicense | p99 | 5ms | 241ms | 236ms | 4757.85
| createCategoryForTeamForUser | p99 | 50ms | 990ms | 940ms | 1894.21
| autocompleteEmojis | p99 | 5ms | 96ms | 91ms | 1832.82
| getChannelMembers | p99 | 50ms | 493ms | 443ms | 890.45
| getGroups | p99 | 25ms | 243ms | 218ms | 883.81
| getChannelMembersForUser | p99 | 25ms | 243ms | 218ms | 875.91
| unfollowThreadByUser | p99 | 1.015s | 2.825s | 1.81s | 178.28
| getAnalytics | p99 | 980ms | 2.47s | 1.49s | 152.02
| getChannel | p99 | 675ms | 1.485s | 810ms | 119.99
| getFilteredUsersStats | p99 | 247ms | 492ms | 245ms | 99.33
| getLicenseSelfServeStatus | p99 | 493ms | 980ms | 487ms | 98.75
| followThreadByUser | p99 | 485ms | 955ms | 470ms | 96.91
| createChannel | p99 | 482ms | 935ms | 453ms | 93.89
| getRolesByNames | p99 | 490ms | 950ms | 460ms | 93.87
| getUser | p99 | 489ms | 840ms | 351ms | 71.74
| createGroupChannel | p99 | 4.561s | 7.625s | 3.064s | 67.18
| getPreferences | p99 | 459ms | 691ms | 232ms | 50.56
| searchGroupChannels | p99 | 471ms | 709ms | 238ms | 50.49
| createUser | p99 | 807ms | 1.21s | 403ms | 49.95
| getThreadsForUser | p99 | 499ms | 735ms | 236ms | 47.28
| searchPostsInTeam | p99 | 2.391s | 3.484s | 1.093s | 45.71
| getChannelMember | p99 | 603ms | 842ms | 239ms | 39.61
| viewChannel | p99 | 938ms | 1.289s | 351ms | 37.43
| saveReaction | p99 | 1.419s | 1.949s | 530ms | 37.36
| getPostsForChannel | p99 | 4.706s | 6.024s | 1.318s | 28.01
| createPost | p99 | 6.799s | 8.692s | 1.893s | 27.84
| getCategoriesForTeamForUser | p99 | 936ms | 1.191s | 255ms | 27.25
| patchPost | p99 | 3.692s | 4.6s | 908ms | 24.60
| autocompleteUsers | p99 | 1.567s | 1.949s | 382ms | 24.38
| getPostThread | p99 | 2.431s | 3.001s | 570ms | 23.45
| updateReadStateThreadByUser | p99 | 3.486s | 4.223s | 737ms | 21.14
| getChannelsForTeamForUser | p99 | 485ms | 586ms | 101ms | 20.84
| getTeamsUnreadForUser | p99 | 761ms | 879ms | 118ms | 15.50
| getChannelMembersForTeamForUser | p99 | 472ms | 527ms | 55ms | 11.65
| getUsersByNames | p99 | 435ms | 478ms | 43ms | 9.89
| getAllTeams | p99 | 454ms | 493ms | 39ms | 8.59
| getTeamsForUser | p99 | 451ms | 488ms | 37ms | 8.20
| getUsersByIds | p99 | 84ms | 90ms | 6ms | 7.11
| getPostsForChannelAroundLastUnread | p99 | 2.235s | 2.393s | 158ms | 7.07
| getTeamMembersForUser | p99 | 385ms | 407ms | 22ms | 5.71
| updateCategoriesForTeamForUser | p99 | 2.268s | 2.389s | 121ms | 5.34
| autocompleteChannelsForTeamForSearch | p99 | 2.165s | 2.279s | 114ms | 5.27
| updatePreferences | p99 | 167ms | 175ms | 8ms | 4.80
| addTeamMember | p99 | 9.678s | 10s | 322ms | 3.33
| getUsers | p99 | 485ms | 499ms | 14ms | 2.89
| getClientConfig | p99 | 215ms | 220ms | 5ms | 2.33
| getProfileImage | p99 | 459ms | 469ms | 10ms | 2.18
| searchUsers | p99 | 956ms | 975ms | 19ms | 1.99
### API times avg (improved):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| handleCheckCWSConnection | avg | 33ms | 0s | -33ms | -100.21
| searchFiles | avg | 121ms | 0s | -121ms | -99.59
| root | avg | 30ms | 0s | -30ms | -98.78
| upsertDraft | avg | 31ms | 11ms | -20ms | -64.13
| getChannelUnread | avg | 28ms | 17ms | -11ms | -39.12
| getPublicChannelsForTeam | avg | 69ms | 50ms | -19ms | -27.41
| getFileThumbnail | avg | 90ms | 66ms | -24ms | -26.81
| deletePost | avg | 448ms | 332ms | -116ms | -25.91
| getChannelsForUser | avg | 35ms | 26ms | -9ms | -25.75
| getUsers | avg | 45ms | 35ms | -10ms | -22.18
| getFilePreview | avg | 89ms | 71ms | -18ms | -20.32
| getChannelStats | avg | 69ms | 56ms | -13ms | -18.95
| getTeamMembersForUser | avg | 29ms | 25ms | -4ms | -13.86
| addChannelMember | avg | 792ms | 686ms | -106ms | -13.39
| login | avg | 183ms | 169ms | -14ms | -7.63
| logout | avg | 150ms | 140ms | -10ms | -6.68
| autocompleteChannelsForTeamForSearch | avg | 303ms | 284ms | -19ms | -6.26
| removeUserCustomStatus | avg | 152ms | 144ms | -8ms | -5.26
### API times p99 (improved):
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| handleCheckCWSConnection | p99 | 50ms | 0s | -50ms | -100.28
| searchFiles | p99 | 248ms | 0s | -248ms | -99.80
| root | p99 | 239ms | 5ms | -234ms | -97.70
| setPostReminder | p99 | 2.26s | 980ms | -1.28s | -56.64
| logout | p99 | 910ms | 477ms | -433ms | -47.58
| removeUserCustomStatus | p99 | 842ms | 483ms | -359ms | -42.65
| getFileThumbnail | p99 | 846ms | 496ms | -350ms | -41.36
| getFilePreview | p99 | 798ms | 489ms | -309ms | -38.70
| getChannelUnread | p99 | 353ms | 275ms | -78ms | -22.08
| getTeamMember | p99 | 123ms | 96ms | -27ms | -21.97
| login | p99 | 1.701s | 1.493s | -208ms | -12.23
| getChannelStats | p99 | 1.087s | 963ms | -124ms | -11.41
| createDirectChannel | p99 | 2.562s | 2.441s | -121ms | -4.72
| upsertDraft | p99 | 99ms | 95ms | -4ms | -4.04
| getChannelsForUser | p99 | 409ms | 393ms | -16ms | -3.91
| getPublicChannelsForTeam | p99 | 480ms | 472ms | -8ms | -1.67
### Store times:
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| AuditStore.Save |  Avg| 5ms| 5ms | 0s | 0.000
| |  P99| 39ms| 41ms | 2ms | 5.142
| BotStore.Get |  Avg| 28ms| 40ms | 12ms | 42.509
| |  P99| 430ms| 479ms | 49ms | 11.395
| ChannelMemberHistoryStore.LogJoinEvent |  Avg| 5ms| 5ms | 0s | 0.000
| |  P99| 37ms| 44ms | 7ms | 18.779
| ChannelStore.AnalyticsTypeCount |  Avg| 35ms| 41ms | 6ms | 17.102
| |  P99| 244ms| 244ms | 0s | 0.000
| ChannelStore.Autocomplete |  Avg| 2.301s| 2.314s | 13ms | 0.565
| |  P99| 9.503s| 9.531s | 28ms | 0.295
| ChannelStore.AutocompleteInTeamForSearch |  Avg| 303ms| 284ms | -19ms | -6.272
| |  P99| 2.165s| 2.279s | 114ms | 5.266
| ChannelStore.CreateDirectChannel |  Avg| 120ms| 172ms | 52ms | 43.225
| |  P99| 991ms| 1.947s | 956ms | 96.468
| ChannelStore.CreateInitialSidebarCategories |  Avg| 59ms| 73ms | 14ms | 23.724
| |  P99| 461ms| 617ms | 156ms | 33.834
| ChannelStore.CreateSidebarCategory |  Avg| 30ms| 39ms | 9ms | 29.564
| |  P99| 50ms| 99ms | 49ms | 98.741
| ChannelStore.Get |  Avg| 79ms| 93ms | 14ms | 17.700
| |  P99| 633ms| 868ms | 235ms | 37.150
| ChannelStore.GetAllChannelMemberIdsByChannelId |  Avg| 62ms| 77ms | 15ms | 24.182
| |  P99| 482ms| 1.154s | 672ms | 139.429
| ChannelStore.GetAllChannelMembersForUser |  Avg| 3ms| 28ms | 25ms | 845.863
| |  P99| 78ms| 400ms | 322ms | 414.018
| ChannelStore.GetAllChannelMembersNotifyPropsForChannel |  Avg| 27ms| 73ms | 46ms | 169.140
| |  P99| 159ms| 788ms | 629ms | 396.375
| ChannelStore.GetByName |  Avg| 39ms| 51ms | 12ms | 31.005
| |  P99| 453ms| 496ms | 43ms | 9.487
| ChannelStore.GetChannelUnread |  Avg| 26ms| 15ms | -11ms | -42.710
| |  P99| 290ms| 258ms | -32ms | -11.048
| ChannelStore.GetChannels |  Avg| 44ms| 46ms | 2ms | 4.564
| |  P99| 474ms| 532ms | 58ms | 12.242
| ChannelStore.GetChannelsByUser |  Avg| 35ms| 26ms | -9ms | -25.808
| |  P99| 406ms| 389ms | -17ms | -4.192
| ChannelStore.GetChannelsWithUnreadsAndWithMentions |  Avg| 36ms| 41ms | 5ms | 14.064
| |  P99| 444ms| 490ms | 46ms | 10.363
| ChannelStore.GetFileCount |  Avg| 31ms| 35ms | 4ms | 12.815
| |  P99| 394ms| 437ms | 43ms | 10.918
| ChannelStore.GetGuestCount |  Avg| 68ms| 75ms | 7ms | 10.329
| |  P99| 589ms| 787ms | 198ms | 33.639
| ChannelStore.GetMember |  Avg| 5ms| 4ms | -1ms | -21.381
| |  P99| 67ms| 50ms | -17ms | -25.362
| ChannelStore.GetMemberCount |  Avg| 342ms| 354ms | 12ms | 3.504
| |  P99| 1.074s| 1.651s | 577ms | 53.721
| ChannelStore.GetMemberForPost |  Avg| 29ms| 58ms | 29ms | 101.246
| |  P99| 398ms| 695ms | 297ms | 74.627
| ChannelStore.GetMemberLastViewedAt |  Avg| 32ms| 36ms | 4ms | 12.602
| |  P99| 417ms| 465ms | 48ms | 11.508
| ChannelStore.GetMembers |  Avg| 37ms| 96ms | 59ms | 159.016
| |  P99| 50ms| 493ms | 443ms | 890.452
| ChannelStore.GetMembersForUser |  Avg| 43ms| 47ms | 4ms | 9.202
| |  P99| 467ms| 500ms | 33ms | 7.062
| ChannelStore.GetMembersForUserWithPagination |  Avg| 74ms| 149ms | 75ms | 101.057
| |  P99| 246ms| 880ms | 634ms | 257.914
| ChannelStore.GetPinnedPostCount |  Avg| 43ms| 46ms | 3ms | 6.898
| |  P99| 479ms| 484ms | 5ms | 1.044
| ChannelStore.GetPublicChannelsForTeam |  Avg| 68ms| 49ms | -19ms | -27.992
| |  P99| 480ms| 472ms | -8ms | -1.668
| ChannelStore.GetSidebarCategoriesForTeamForUser |  Avg| 91ms| 95ms | 4ms | 4.405
| |  P99| 934ms| 1.182s | 248ms | 26.539
| ChannelStore.GetSidebarCategory |  Avg| 65ms| 74ms | 9ms | 13.917
| |  P99| 465ms| 476ms | 11ms | 2.366
| ChannelStore.GetTeamChannels |  Avg| 80ms| 183ms | 103ms | 128.473
| |  P99| 482ms| 935ms | 453ms | 93.888
| ChannelStore.IncrementMentionCount |  Avg| 3ms| 3ms | 0s | 0.000
| |  P99| 34ms| 38ms | 4ms | 11.634
| ChannelStore.InvalidateAllChannelMembersForUser |  Avg| 0s| 0s | 0s | 0.000
| |  P99| 5ms| 0s | -5ms | -100.999
| ChannelStore.InvalidateChannelByName |  Avg| 0s| 0s | 0s | 0.000
| |  P99| 5ms| 0s | -5ms | -101.007
| ChannelStore.Save |  Avg| 57ms| 66ms | 9ms | 15.890
| |  P99| 438ms| 525ms | 87ms | 19.841
| ChannelStore.SaveMember |  Avg| 191ms| 237ms | 46ms | 24.134
| |  P99| 2.032s| 2.31s | 278ms | 13.683
| ChannelStore.SearchGroupChannels |  Avg| 44ms| 54ms | 10ms | 22.768
| |  P99| 471ms| 709ms | 238ms | 50.486
| ChannelStore.UpdateLastViewedAt |  Avg| 9ms| 9ms | 0s | 0.000
| |  P99| 74ms| 78ms | 4ms | 5.386
| ChannelStore.UpdateSidebarCategories |  Avg| 143ms| 173ms | 30ms | 20.931
| |  P99| 845ms| 954ms | 109ms | 12.899
| ChannelStore.UpdateSidebarChannelsByPreferences |  Avg| 3ms| 3ms | 0s | 0.000
| |  P99| 24ms| 32ms | 8ms | 32.655
| ClusterDiscoveryStore.SetLastPingAt |  Avg| 7ms| 6ms | -1ms | -15.242
| |  P99| 67ms| 68ms | 1ms | 1.493
| CommandWebhookStore.Cleanup |  Avg| 2ms| 8ms | 6ms | 340.196
| |  P99| 5ms| 24ms | 19ms | 383.760
| DesktopTokensStore.DeleteOlderThan |  Avg| 2ms| 2ms | 0s | 0.000
| |  P99| 5ms| 5ms | 0s | 0.000
| DraftStore.Delete |  Avg| 2ms| 15ms | 13ms | 546.041
| |  P99| 5ms| 25ms | 20ms | 404.040
| DraftStore.DeleteDraftsAssociatedWithPost |  Avg| 6ms| 4ms | -2ms | -31.688
| |  P99| 89ms| 24ms | -65ms | -73.446
| DraftStore.GetDraftsForUser |  Avg| 1ms| 41ms | 40ms | 4188.194
| |  P99| 5ms| 246ms | 241ms | 4856.086
| EmojiStore.GetByName |  Avg| 42ms| 47ms | 5ms | 11.991
| |  P99| 461ms| 494ms | 33ms | 7.164
| EmojiStore.GetMultipleByName |  Avg| 268ms| 131ms | -137ms | -51.170
| |  P99| 968ms| 455ms | -513ms | -52.977
| EmojiStore.Search |  Avg| 1ms| 29ms | 28ms | 3668.052
| |  P99| 5ms| 96ms | 91ms | 1832.820
| FileInfoStore.AttachToPost |  Avg| 8ms| 8ms | 0s | 0.000
| |  P99| 52ms| 50ms | -2ms | -3.812
| FileInfoStore.Get |  Avg| 29ms| 35ms | 6ms | 20.868
| |  P99| 411ms| 472ms | 61ms | 14.826
| FileInfoStore.GetForPost |  Avg| 52ms| 59ms | 7ms | 13.354
| |  P99| 536ms| 716ms | 180ms | 33.558
| FileInfoStore.Save |  Avg| 6ms| 6ms | 0s | 0.000
| |  P99| 48ms| 43ms | -5ms | -10.365
| FileInfoStore.Search |  Avg| 108ms| 0s | -108ms | -100.330
| |  P99| 248ms| 0s | -248ms | -99.799
| FileInfoStore.SetContent |  Avg| 11ms| 11ms | 0s | 0.000
| |  P99| 87ms| 74ms | -13ms | -14.977
| GroupStore.AdminRoleGroupsForSyncableMember |  Avg| 38ms| 52ms | 14ms | 36.372
| |  P99| 429ms| 496ms | 67ms | 15.615
| GroupStore.GetByName |  Avg| 28ms| 32ms | 4ms | 14.162
| |  P99| 372ms| 437ms | 65ms | 17.460
| GroupStore.GetGroups |  Avg| 47ms| 53ms | 6ms | 12.857
| |  P99| 479ms| 629ms | 150ms | 31.291
| GroupStore.GetGroupsAssociatedToChannelsByTeam |  Avg| 1ms| 65ms | 64ms | 7000.430
| |  P99| 5ms| 246ms | 241ms | 4856.006
| JobStore.Get |  Avg| 54ms| 37ms | -17ms | -31.238
| |  P99| 443ms| 414ms | -29ms | -6.539
| JobStore.GetAllByStatus |  Avg| 40ms| 47ms | 7ms | 17.506
| |  P99| 453ms| 608ms | 155ms | 34.198
| JobStore.GetCountByStatusAndType |  Avg| 50ms| 29ms | -21ms | -42.115
| |  P99| 550ms| 411ms | -139ms | -25.273
| JobStore.GetNewestJobByStatusesAndType |  Avg| 44ms| 32ms | -12ms | -27.550
| |  P99| 600ms| 382ms | -218ms | -36.333
| JobStore.Save |  Avg| 6ms| 6ms | 0s | 0.000
| |  P99| 42ms| 65ms | 23ms | 55.422
| JobStore.UpdateOptimistically |  Avg| 5ms| 4ms | -1ms | -21.362
| |  P99| 22ms| 33ms | 11ms | 50.925
| JobStore.UpdateStatus |  Avg| 5ms| 5ms | 0s | 0.000
| |  P99| 20ms| 22ms | 2ms | 10.050
| JobStore.UpdateStatusOptimistically |  Avg| 6ms| 5ms | -1ms | -17.742
| |  P99| 24ms| 33ms | 9ms | 37.935
| LicenseStore.GetAll |  Avg| 1ms| 24ms | 23ms | 4433.669
| |  P99| 5ms| 240ms | 235ms | 4735.153
| LinkMetadataStore.Get |  Avg| 43ms| 50ms | 7ms | 16.142
| |  P99| 467ms| 624ms | 157ms | 33.627
| LinkMetadataStore.Save |  Avg| 5ms| 5ms | 0s | 0.000
| |  P99| 65ms| 43ms | -22ms | -34.106
| PluginStore.Delete |  Avg| 3ms| 3ms | 0s | 0.000
| |  P99| 21ms| 22ms | 1ms | 4.680
| PluginStore.Get |  Avg| 161ms| 72ms | -89ms | -55.318
| |  P99| 970ms| 470ms | -500ms | -51.546
| PluginStore.List |  Avg| 60ms| 32ms | -28ms | -46.551
| |  P99| 720ms| 710ms | -10ms | -1.389
| PluginStore.SetWithOptions |  Avg| 7ms| 7ms | 0s | 0.000
| |  P99| 44ms| 45ms | 1ms | 2.285
| PostAcknowledgementStore.GetForPost |  Avg| 33ms| 57ms | 24ms | 73.196
| |  P99| 350ms| 835ms | 485ms | 138.578
| PostAcknowledgementStore.GetForPosts |  Avg| 54ms| 62ms | 8ms | 14.888
| |  P99| 772ms| 924ms | 152ms | 19.677
| PostPersistentNotificationStore.DeleteExpired |  Avg| 2ms| 2ms | 0s | 0.000
| |  P99| 19ms| 5ms | -14ms | -74.258
| PostPersistentNotificationStore.Get |  Avg| 3ms| 3ms | 0s | 0.000
| |  P99| 40ms| 40ms | 0s | 0.000
| PostPersistentNotificationStore.GetSingle |  Avg| 44ms| 54ms | 10ms | 22.870
| |  P99| 482ms| 723ms | 241ms | 50.051
| PostPriorityStore.GetForPost |  Avg| 31ms| 50ms | 19ms | 60.812
| |  P99| 383ms| 734ms | 351ms | 91.565
| PostPriorityStore.GetForPosts |  Avg| 56ms| 64ms | 8ms | 14.328
| |  P99| 800ms| 934ms | 134ms | 16.758
| PostStore.AnalyticsPostCount |  Avg| 2.985s| 3.051s | 66ms | 2.211
| |  P99| 4.975s| 4.975s | 0s | 0.000
| PostStore.Delete |  Avg| 90ms| 59ms | -31ms | -34.351
| |  P99| 885ms| 465ms | -420ms | -47.457
| PostStore.Get |  Avg| 78ms| 88ms | 10ms | 12.785
| |  P99| 885ms| 977ms | 92ms | 10.400
| PostStore.GetEtag |  Avg| 58ms| 65ms | 7ms | 12.155
| |  P99| 499ms| 707ms | 208ms | 41.714
| PostStore.GetMaxPostSize |  Avg| 0s| 0s | 0s | 0.000
| |  P99| 5ms| 5ms | 0s | 0.000
| PostStore.GetPostIdAfterTime |  Avg| 3ms| 3ms | 0s | 0.000
| |  P99| 36ms| 39ms | 3ms | 8.265
| PostStore.GetPostIdBeforeTime |  Avg| 4ms| 5ms | 1ms | 22.432
| |  P99| 41ms| 42ms | 1ms | 2.469
| PostStore.GetPostReminderMetadata |  Avg| 38ms| 50ms | 12ms | 31.694
| |  P99| 460ms| 454ms | -6ms | -1.304
| PostStore.GetPostReminders |  Avg| 8ms| 8ms | 0s | 0.000
| |  P99| 24ms| 24ms | 0s | 0.000
| PostStore.GetPosts |  Avg| 33ms| 39ms | 6ms | 18.068
| |  P99| 402ms| 463ms | 61ms | 15.188
| PostStore.GetPostsAfter |  Avg| 37ms| 36ms | -1ms | -2.722
| |  P99| 449ms| 458ms | 9ms | 2.007
| PostStore.GetPostsBefore |  Avg| 45ms| 49ms | 4ms | 8.839
| |  P99| 474ms| 542ms | 68ms | 14.345
| PostStore.GetPostsByThread |  Avg| 46ms| 50ms | 4ms | 8.652
| |  P99| 481ms| 659ms | 178ms | 36.983
| PostStore.GetPostsSince |  Avg| 64ms| 69ms | 5ms | 7.856
| |  P99| 493ms| 689ms | 196ms | 39.791
| PostStore.GetSingle |  Avg| 43ms| 49ms | 6ms | 14.106
| |  P99| 462ms| 600ms | 138ms | 29.861
| PostStore.InvalidateLastPostTimeCache |  Avg| 0s| 0s | 0s | 0.000
| |  P99| 5ms| 5ms | 0s | 0.000
| PostStore.Save |  Avg| 17ms| 18ms | 1ms | 5.783
| |  P99| 114ms| 129ms | 15ms | 13.209
| PostStore.SearchPostsForUser |  Avg| 100ms| 107ms | 7ms | 6.981
| |  P99| 856ms| 1.071s | 215ms | 25.131
| PostStore.SetPostReminder |  Avg| 17ms| 8ms | -9ms | -52.490
| |  P99| 226ms| 45ms | -181ms | -80.087
| PostStore.Update |  Avg| 21ms| 22ms | 1ms | 4.771
| |  P99| 94ms| 97ms | 3ms | 3.188
| PreferenceStore.DeleteCategoryAndName |  Avg| 7ms| 4ms | -3ms | -44.249
| |  P99| 89ms| 24ms | -65ms | -73.446
| PreferenceStore.Get |  Avg| 38ms| 44ms | 6ms | 15.741
| |  P99| 464ms| 525ms | 61ms | 13.144
| PreferenceStore.GetAll |  Avg| 45ms| 61ms | 16ms | 35.254
| |  P99| 454ms| 653ms | 199ms | 43.872
| PreferenceStore.Save |  Avg| 13ms| 14ms | 1ms | 7.810
| |  P99| 92ms| 98ms | 6ms | 6.555
| ProductNoticesStore.ClearOldNotices |  Avg| 3ms| 2ms | -1ms | -37.476
| |  P99| 5ms| 5ms | 0s | 0.000
| ProductNoticesStore.GetViews |  Avg| 1ms| 135ms | 134ms | 22357.741
| |  P99| 5ms| 492ms | 487ms | 9812.596
| ProductNoticesStore.View |  Avg| 45ms| 47ms | 2ms | 4.461
| |  P99| 235ms| 257ms | 22ms | 9.360
| ReactionStore.GetForPost |  Avg| 48ms| 46ms | -2ms | -4.191
| |  P99| 490ms| 513ms | 23ms | 4.693
| RetentionPolicyStore.GetAll |  Avg| 1ms| 0s | -1ms | -90.039
| |  P99| 5ms| 0s | -5ms | -101.010
| RetentionPolicyStore.GetCount |  Avg| 1ms| 0s | -1ms | -192.958
| |  P99| 5ms| 0s | -5ms | -101.010
| RoleStore.ChannelHigherScopedPermissions |  Avg| 82ms| 153ms | 71ms | 86.779
| |  P99| 888ms| 928ms | 40ms | 4.507
| RoleStore.GetByNames |  Avg| 0s| 0s | 0s | 0.000
| |  P99| 5ms| 5ms | 0s | 0.000
| SessionStore.Get |  Avg| 42ms| 48ms | 6ms | 14.442
| |  P99| 448ms| 488ms | 40ms | 8.934
| SessionStore.GetLRUSessions |  Avg| 27ms| 0s | -27ms | -98.469
| |  P99| 392ms| 0s | -392ms | -99.891
| SessionStore.GetSessionsExpired |  Avg| 65ms| 26ms | -39ms | -59.965
| |  P99| 246ms| 236ms | -10ms | -4.073
| SessionStore.GetSessionsWithActiveDeviceIds |  Avg| 31ms| 38ms | 7ms | 22.598
| |  P99| 434ms| 479ms | 45ms | 10.378
| SessionStore.Remove |  Avg| 12ms| 6ms | -6ms | -51.469
| |  P99| 220ms| 23ms | -197ms | -89.550
| SessionStore.Save |  Avg| 31ms| 32ms | 1ms | 3.240
| |  P99| 374ms| 426ms | 52ms | 13.889
| SessionStore.UpdateLastActivityAt |  Avg| 5ms| 5ms | 0s | 0.000
| |  P99| 36ms| 39ms | 3ms | 8.248
| StatusStore.Get |  Avg| 25ms| 29ms | 4ms | 16.188
| |  P99| 356ms| 431ms | 75ms | 21.065
| StatusStore.GetByIds |  Avg| 65ms| 51ms | -14ms | -21.577
| |  P99| 910ms| 589ms | -321ms | -35.273
| StatusStore.SaveOrUpdate |  Avg| 40ms| 21ms | -19ms | -47.265
| |  P99| 681ms| 438ms | -243ms | -35.663
| StatusStore.UpdateExpiredDNDStatuses |  Avg| 13ms| 9ms | -4ms | -31.176
| |  P99| 93ms| 44ms | -49ms | -52.406
| StatusStore.UpdateLastActivityAt |  Avg| 5ms| 6ms | 1ms | 18.676
| |  P99| 42ms| 48ms | 6ms | 14.414
| SystemStore.GetByName |  Avg| 3ms| 3ms | 0s | 0.000
| |  P99| 29ms| 33ms | 4ms | 13.784
| SystemStore.PermanentDeleteByName |  Avg| 4ms| 0s | -4ms | -96.284
| |  P99| 5ms| 0s | -5ms | -101.010
| SystemStore.SaveOrUpdate |  Avg| 3ms| 0s | -3ms | -94.906
| |  P99| 5ms| 0s | -5ms | -101.010
| TeamStore.AnalyticsTeamCount |  Avg| 25ms| 31ms | 6ms | 23.835
| |  P99| 97ms| 243ms | 146ms | 149.751
| TeamStore.Get |  Avg| 41ms| 49ms | 8ms | 19.496
| |  P99| 458ms| 584ms | 126ms | 27.517
| TeamStore.GetAllPage |  Avg| 37ms| 44ms | 7ms | 18.852
| |  P99| 436ms| 482ms | 46ms | 10.554
| TeamStore.GetByName |  Avg| 27ms| 0s | -27ms | -99.798
| |  P99| 395ms| 0s | -395ms | -100.125
| TeamStore.GetChannelUnreadsForAllTeams |  Avg| 37ms| 41ms | 4ms | 10.805
| |  P99| 432ms| 473ms | 41ms | 9.491
| TeamStore.GetMember |  Avg| 4ms| 4ms | 0s | 0.000
| |  P99| 70ms| 66ms | -4ms | -5.701
| TeamStore.GetTeamsByUserId |  Avg| 41ms| 47ms | 6ms | 14.710
| |  P99| 452ms| 487ms | 35ms | 7.743
| TeamStore.GetTeamsForUser |  Avg| 26ms| 22ms | -4ms | -15.189
| |  P99| 338ms| 373ms | 35ms | 10.353
| TeamStore.SaveMember |  Avg| 146ms| 159ms | 13ms | 8.900
| |  P99| 584ms| 816ms | 232ms | 39.755
| ThreadStore.Get |  Avg| 50ms| 93ms | 43ms | 86.374
| |  P99| 489ms| 2.55s | 2.061s | 421.316
| ThreadStore.GetMembershipForUser |  Avg| 39ms| 49ms | 10ms | 25.649
| |  P99| 459ms| 652ms | 193ms | 42.005
| ThreadStore.GetTeamsUnreadForUser |  Avg| 42ms| 44ms | 2ms | 4.781
| |  P99| 480ms| 637ms | 157ms | 32.697
| ThreadStore.GetThreadFollowers |  Avg| 44ms| 51ms | 7ms | 15.798
| |  P99| 487ms| 652ms | 165ms | 33.850
| ThreadStore.GetThreadForUser |  Avg| 57ms| 72ms | 15ms | 26.141
| |  P99| 747ms| 931ms | 184ms | 24.629
| ThreadStore.GetThreadUnreadReplyCount |  Avg| 49ms| 55ms | 6ms | 12.251
| |  P99| 480ms| 678ms | 198ms | 41.277
| ThreadStore.GetThreadsForUser |  Avg| 51ms| 57ms | 6ms | 11.810
| |  P99| 491ms| 695ms | 204ms | 41.571
| ThreadStore.GetTotalThreads |  Avg| 36ms| 37ms | 1ms | 2.806
| |  P99| 442ms| 473ms | 31ms | 7.008
| ThreadStore.GetTotalUnreadMentions |  Avg| 34ms| 37ms | 3ms | 8.790
| |  P99| 437ms| 472ms | 35ms | 8.010
| ThreadStore.GetTotalUnreadThreads |  Avg| 35ms| 38ms | 3ms | 8.579
| |  P99| 441ms| 476ms | 35ms | 7.940
| ThreadStore.GetTotalUnreadUrgentMentions |  Avg| 35ms| 38ms | 3ms | 8.552
| |  P99| 432ms| 477ms | 45ms | 10.421
| ThreadStore.MaintainMembership |  Avg| 9ms| 9ms | 0s | 0.000
| |  P99| 85ms| 89ms | 4ms | 4.701
| ThreadStore.MarkAllAsReadByChannels |  Avg| 4ms| 3ms | -1ms | -26.046
| |  P99| 45ms| 40ms | -5ms | -11.195
| ThreadStore.MarkAllAsReadByTeam |  Avg| 4ms| 4ms | 0s | 0.000
| |  P99| 5ms| 5ms | 0s | 0.000
| ThreadStore.MarkAsRead |  Avg| 6ms| 6ms | 0s | 0.000
| |  P99| 43ms| 45ms | 2ms | 4.665
| ThreadStore.UpdateMembership |  Avg| 6ms| 6ms | 0s | 0.000
| |  P99| 48ms| 50ms | 2ms | 4.177
| TokenStore.Cleanup |  Avg| 2ms| 18ms | 16ms | 735.787
| |  P99| 5ms| 49ms | 44ms | 888.708
| UserAccessTokenStore.GetByToken |  Avg| 35ms| 19ms | -16ms | -45.292
| |  P99| 650ms| 303ms | -347ms | -53.381
| UserStore.AnalyticsActiveCount |  Avg| 391ms| 406ms | 15ms | 3.837
| |  P99| 980ms| 987ms | 7ms | 0.714
| UserStore.AnalyticsGetInactiveUsersCount |  Avg| 14ms| 25ms | 11ms | 79.561
| |  P99| 49ms| 98ms | 49ms | 99.485
| UserStore.AutocompleteUsersInChannel |  Avg| 413ms| 427ms | 14ms | 3.390
| |  P99| 1.765s| 2.096s | 331ms | 18.753
| UserStore.Count |  Avg| 247ms| 217ms | -30ms | -12.162
| |  P99| 795ms| 937ms | 142ms | 17.862
| UserStore.Get |  Avg| 12ms| 14ms | 2ms | 16.698
| |  P99| 243ms| 319ms | 76ms | 31.212
| UserStore.GetAllProfiles |  Avg| 38ms| 36ms | -2ms | -5.327
| |  P99| 423ms| 450ms | 27ms | 6.385
| UserStore.GetAllProfilesInChannel |  Avg| 829ms| 847ms | 18ms | 2.170
| |  P99| 2.462s| 2.465s | 3ms | 0.122
| UserStore.GetByUsername |  Avg| 43ms| 40ms | -3ms | -7.006
| |  P99| 457ms| 499ms | 42ms | 9.180
| UserStore.GetForLogin |  Avg| 29ms| 31ms | 2ms | 6.901
| |  P99| 398ms| 438ms | 40ms | 10.057
| UserStore.GetMany |  Avg| 26ms| 73ms | 47ms | 183.648
| |  P99| 240ms| 482ms | 242ms | 101.038
| UserStore.GetProfileByIds |  Avg| 25ms| 29ms | 4ms | 16.110
| |  P99| 396ms| 461ms | 65ms | 16.427
| UserStore.GetProfilesByUsernames |  Avg| 33ms| 37ms | 4ms | 12.119
| |  P99| 430ms| 476ms | 46ms | 10.687
| UserStore.GetProfilesInChannel |  Avg| 161ms| 103ms | -58ms | -36.120
| |  P99| 473ms| 900ms | 427ms | 90.356
| UserStore.GetUnreadCount |  Avg| 38ms| 42ms | 4ms | 10.395
| |  P99| 472ms| 578ms | 106ms | 22.480
| UserStore.IsEmpty |  Avg| 18ms| 22ms | 4ms | 21.901
| |  P99| 236ms| 311ms | 75ms | 31.832
| UserStore.Save |  Avg| 72ms| 73ms | 1ms | 1.380
| |  P99| 221ms| 232ms | 11ms | 4.976
| UserStore.Search |  Avg| 206ms| 207ms | 1ms | 0.486
| |  P99| 954ms| 971ms | 17ms | 1.782
| UserStore.Update |  Avg| 10ms| 7ms | -3ms | -29.718
| |  P99| 76ms| 37ms | -39ms | -51.483
| UserStore.UpdateFailedPasswordAttempts |  Avg| 5ms| 5ms | 0s | 0.000
| |  P99| 40ms| 39ms | -1ms | -2.481
| UserStore.UpdateLastLogin |  Avg| 5ms| 5ms | 0s | 0.000
| |  P99| 32ms| 34ms | 2ms | 6.323
| UserStore.UpdateUpdateAt |  Avg| 5ms| 6ms | 1ms | 18.818
| |  P99| 37ms| 43ms | 6ms | 16.065
| UserTermsOfServiceStore.GetByUser |  Avg| 35ms| 43ms | 8ms | 22.862
| |  P99| 430ms| 491ms | 61ms | 14.188
| WebhookStore.GetOutgoingByTeam |  Avg| 47ms| 54ms | 7ms | 14.772
| |  P99| 486ms| 676ms | 190ms | 39.088
### API times:
| | | Base | Actual | Delta | Delta % |
| --- | --- | --- | --- | --- | --- |
| addChannelMember | Avg| 792ms| 686ms | -106ms | -13.386
| | P99| 7.525s| 7.475s | -50ms | -0.664
| addTeamMember | Avg| 2.31s| 2.568s | 258ms | 11.167
| | P99| 9.678s| 10s | 322ms | 3.327
| autocompleteChannelsForTeamForSearch | Avg| 303ms| 284ms | -19ms | -6.264
| | P99| 2.165s| 2.279s | 114ms | 5.266
| autocompleteEmojis | Avg| 1ms| 29ms | 28ms | 3491.324
| | P99| 5ms| 96ms | 91ms | 1832.820
| autocompleteUsers | Avg| 340ms| 347ms | 7ms | 2.057
| | P99| 1.567s| 1.949s | 382ms | 24.376
| createCategoryForTeamForUser | Avg| 35ms| 424ms | 389ms | 1123.398
| | P99| 50ms| 990ms | 940ms | 1894.207
| createChannel | Avg| 80ms| 183ms | 103ms | 128.278
| | P99| 482ms| 935ms | 453ms | 93.888
| createDirectChannel | Avg| 372ms| 461ms | 89ms | 23.893
| | P99| 2.562s| 2.441s | -121ms | -4.723
| createGroupChannel | Avg| 779ms| 830ms | 51ms | 6.543
| | P99| 4.561s| 7.625s | 3.064s | 67.183
| createPost | Avg| 1.251s| 1.291s | 40ms | 3.198
| | P99| 6.799s| 8.692s | 1.893s | 27.841
| createUser | Avg| 149ms| 219ms | 70ms | 46.944
| | P99| 807ms| 1.21s | 403ms | 49.949
| deletePost | Avg| 448ms| 332ms | -116ms | -25.910
| | P99| 2.414s| 2.395s | -19ms | -0.787
| followThreadByUser | Avg| 102ms| 175ms | 73ms | 71.268
| | P99| 485ms| 955ms | 470ms | 96.907
| getAllTeams | Avg| 40ms| 47ms | 7ms | 17.605
| | P99| 454ms| 493ms | 39ms | 8.592
| getAnalytics | Avg| 395ms| 1.157s | 762ms | 193.008
| | P99| 980ms| 2.47s | 1.49s | 152.022
| getCategoriesForTeamForUser | Avg| 91ms| 95ms | 4ms | 4.392
| | P99| 936ms| 1.191s | 255ms | 27.255
| getChannel | Avg| 58ms| 108ms | 50ms | 86.253
| | P99| 675ms| 1.485s | 810ms | 119.992
| getChannelMember | Avg| 45ms| 58ms | 13ms | 28.906
| | P99| 603ms| 842ms | 239ms | 39.605
| getChannelMembers | Avg| 38ms| 97ms | 59ms | 157.022
| | P99| 50ms| 493ms | 443ms | 890.452
| getChannelMembersForTeamForUser | Avg| 44ms| 47ms | 3ms | 6.784
| | P99| 472ms| 527ms | 55ms | 11.649
| getChannelMembersForUser | Avg| 19ms| 57ms | 38ms | 201.762
| | P99| 25ms| 243ms | 218ms | 875.908
| getChannelStats | Avg| 69ms| 56ms | -13ms | -18.945
| | P99| 1.087s| 963ms | -124ms | -11.410
| getChannelUnread | Avg| 28ms| 17ms | -11ms | -39.125
| | P99| 353ms| 275ms | -78ms | -22.084
| getChannelsForTeamForUser | Avg| 46ms| 48ms | 2ms | 4.376
| | P99| 485ms| 586ms | 101ms | 20.841
| getChannelsForUser | Avg| 35ms| 26ms | -9ms | -25.753
| | P99| 409ms| 393ms | -16ms | -3.908
| getClientConfig | Avg| 14ms| 14ms | 0s | 0.000
| | P99| 215ms| 220ms | 5ms | 2.330
| getClientLicense | Avg| 0s| 0s | 0s | 0.000
| | P99| 5ms| 5ms | 0s | 0.000
| getDrafts | Avg| 1ms| 81ms | 80ms | 7847.515
| | P99| 5ms| 246ms | 241ms | 4856.086
| getFilePreview | Avg| 89ms| 71ms | -18ms | -20.322
| | P99| 798ms| 489ms | -309ms | -38.700
| getFileThumbnail | Avg| 90ms| 66ms | -24ms | -26.813
| | P99| 846ms| 496ms | -350ms | -41.360
| getFilteredUsersStats | Avg| 109ms| 147ms | 38ms | 34.972
| | P99| 247ms| 492ms | 245ms | 99.331
| getGroups | Avg| 5ms| 38ms | 33ms | 627.805
| | P99| 25ms| 243ms | 218ms | 883.813
| getGroupsAssociatedToChannelsByTeam | Avg| 1ms| 65ms | 64ms | 5694.969
| | P99| 5ms| 246ms | 241ms | 4856.086
| getLicenseSelfServeStatus | Avg| 256ms| 328ms | 72ms | 28.146
| | P99| 493ms| 980ms | 487ms | 98.750
| getPostThread | Avg| 270ms| 291ms | 21ms | 7.780
| | P99| 2.431s| 3.001s | 570ms | 23.448
| getPostsForChannel | Avg| 341ms| 378ms | 37ms | 10.858
| | P99| 4.706s| 6.024s | 1.318s | 28.007
| getPostsForChannelAroundLastUnread | Avg| 176ms| 196ms | 20ms | 11.352
| | P99| 2.235s| 2.393s | 158ms | 7.070
| getPreferences | Avg| 46ms| 63ms | 17ms | 36.853
| | P99| 459ms| 691ms | 232ms | 50.560
| getPrevTrialLicense | Avg| 1ms| 34ms | 33ms | 4109.331
| | P99| 5ms| 241ms | 236ms | 4757.847
| getProfileImage | Avg| 88ms| 92ms | 4ms | 4.566
| | P99| 459ms| 469ms | 10ms | 2.177
| getPublicChannelsForTeam | Avg| 69ms| 50ms | -19ms | -27.407
| | P99| 480ms| 472ms | -8ms | -1.668
| getRolesByNames | Avg| 64ms| 92ms | 28ms | 44.033
| | P99| 490ms| 950ms | 460ms | 93.870
| getTeamMember | Avg| 7ms| 6ms | -1ms | -15.059
| | P99| 123ms| 96ms | -27ms | -21.968
| getTeamMembersForUser | Avg| 29ms| 25ms | -4ms | -13.858
| | P99| 385ms| 407ms | 22ms | 5.712
| getTeamsForUser | Avg| 41ms| 47ms | 6ms | 14.685
| | P99| 451ms| 488ms | 37ms | 8.201
| getTeamsUnreadForUser | Avg| 59ms| 64ms | 5ms | 8.404
| | P99| 761ms| 879ms | 118ms | 15.504
| getThreadsForUser | Avg| 50ms| 56ms | 6ms | 12.058
| | P99| 499ms| 735ms | 236ms | 47.275
| getUser | Avg| 49ms| 66ms | 17ms | 34.889
| | P99| 489ms| 840ms | 351ms | 71.742
| getUserStatus | Avg| 0s| 0s | 0s | 0.000
| | P99| 5ms| 5ms | 0s | 0.000
| getUserStatusesByIds | Avg| 0s| 1ms | 1ms | 203.280
| | P99| 5ms| 5ms | 0s | 0.000
| getUsers | Avg| 45ms| 35ms | -10ms | -22.184
| | P99| 485ms| 499ms | 14ms | 2.885
| getUsersByIds | Avg| 4ms| 4ms | 0s | 0.000
| | P99| 84ms| 90ms | 6ms | 7.111
| getUsersByNames | Avg| 34ms| 38ms | 4ms | 11.928
| | P99| 435ms| 478ms | 43ms | 9.890
| getWebappPlugins | Avg| 0s| 0s | 0s | 0.000
| | P99| 5ms| 5ms | 0s | 0.000
| handleCheckCWSConnection | Avg| 33ms| 0s | -33ms | -100.213
| | P99| 50ms| 0s | -50ms | -100.279
| login | Avg| 183ms| 169ms | -14ms | -7.634
| | P99| 1.701s| 1.493s | -208ms | -12.227
| logout | Avg| 150ms| 140ms | -10ms | -6.684
| | P99| 910ms| 477ms | -433ms | -47.584
| patchPost | Avg| 332ms| 471ms | 139ms | 41.913
| | P99| 3.692s| 4.6s | 908ms | 24.597
| removeUserCustomStatus | Avg| 152ms| 144ms | -8ms | -5.259
| | P99| 842ms| 483ms | -359ms | -42.652
| root | Avg| 30ms| 0s | -30ms | -98.776
| | P99| 239ms| 5ms | -234ms | -97.704
| saveReaction | Avg| 136ms| 155ms | 19ms | 13.978
| | P99| 1.419s| 1.949s | 530ms | 37.357
| searchAllChannels | Avg| 2.302s| 2.315s | 13ms | 0.565
| | P99| 9.507s| 9.531s | 24ms | 0.252
| searchFiles | Avg| 121ms| 0s | -121ms | -99.594
| | P99| 248ms| 0s | -248ms | -99.799
| searchGroupChannels | Avg| 44ms| 54ms | 10ms | 22.731
| | P99| 471ms| 709ms | 238ms | 50.486
| searchPostsInTeam | Avg| 192ms| 210ms | 18ms | 9.364
| | P99| 2.391s| 3.484s | 1.093s | 45.714
| searchUsers | Avg| 207ms| 210ms | 3ms | 1.447
| | P99| 956ms| 975ms | 19ms | 1.988
| setPostReminder | Avg| 187ms| 205ms | 18ms | 9.618
| | P99| 2.26s| 980ms | -1.28s | -56.637
| unfollowThreadByUser | Avg| 100ms| 181ms | 81ms | 80.604
| | P99| 1.015s| 2.825s | 1.81s | 178.278
| updateCategoriesForTeamForUser | Avg| 316ms| 389ms | 73ms | 23.125
| | P99| 2.268s| 2.389s | 121ms | 5.336
| updatePreferences | Avg| 15ms| 15ms | 0s | 0.000
| | P99| 167ms| 175ms | 8ms | 4.800
| updateReadStateAllThreadsByUser | Avg| 5ms| 4ms | -1ms | -21.991
| | P99| 5ms| 5ms | 0s | 0.000
| updateReadStateThreadByUser | Avg| 366ms| 400ms | 34ms | 9.279
| | P99| 3.486s| 4.223s | 737ms | 21.141
| updateUserCustomStatus | Avg| 0s| 0s | 0s | 0.000
| | P99| 5ms| 5ms | 0s | 0.000
| uploadFileStream | Avg| 401ms| 423ms | 22ms | 5.486
| | P99| 995ms| 998ms | 3ms | 0.301
| upsertDraft | Avg| 31ms| 11ms | -20ms | -64.134
| | P99| 99ms| 95ms | -4ms | -4.040
| viewChannel | Avg| 88ms| 102ms | 14ms | 15.946
| | P99| 938ms| 1.289s | 351ms | 37.426
